--- a/index.html
+++ b/index.html
@@ -189,27 +189,104 @@ max-width:300px;
     <p style="font-size:12px;color:var(--muted)">
       Market awareness for everyone • Precision for PRO
     </p>
+    <div class="card">
+  <h3>🌍 Market Sentiment</h3>
+  <table>
+    <tr>
+      <td>BTC Trend</td>
+      <td align="right" style="color:var(--success)">Bullish</td>
+    </tr>
+    <tr>
+      <td>Funding</td>
+      <td align="right">Neutral</td>
+    </tr>
+    <tr>
+      <td>Volatility</td>
+      <td align="right">Moderate</td>
+    </tr>
+    <tr>
+      <td>Fear & Greed</td>
+      <td align="right">Greed</td>
+    </tr>
+  </table>
+
+  <p style="font-size:11px;color:var(--muted);margin-top:6px">
+    Updated every few hours • Free users
+  </p>
+</div>
+
   </div>
 </div>
 
 <!-- SIGNALS -->
-<div id="signals" class="tab">
+<div class="card">
+  <h3>📡 Today’s Signal (Free Preview)</h3>
+
+  <p><b>BTC / USDT</b></p>
+  <p style="color:var(--success)">🐳 Whale accumulation detected</p>
+
+  <table style="margin-top:6px">
+    <tr>
+      <td>Direction</td>
+      <td align="right"><b>LONG</b></td>
+    </tr>
+    <tr>
+      <td>Entry</td>
+      <td align="right"><span class="blur">$66,800</span></td>
+    </tr>
+    <tr>
+      <td>Target</td>
+      <td align="right"><span class="blur">$69,420</span></td>
+    </tr>
+    <tr>
+      <td>Stop Loss</td>
+      <td align="right"><span class="blur">$65,900</span></td>
+    </tr>
+  </table>
+
+  <p style="font-size:12px;color:var(--muted);margin-top:6px">
+    Free users get 1 preview/day • PRO unlocks exact levels
+  </p>
   <div class="card">
-    <h3>📡 Signals <span class="badge">LIVE</span></h3>
-    <p style="font-size:12px;color:var(--muted)">
-      Free users see previews • PRO users see exact levels
-    </p>
-  </div>
+  <h3>🐳 Whale Activity Summary</h3>
+
+  <ul style="font-size:13px;color:#cbd5e1;margin-left:16px">
+    <li>Large BTC inflows detected</li>
+    <li>Exchange reserves decreasing</li>
+    <li>Open interest rising</li>
+  </ul>
+
+  <p style="font-size:11px;color:var(--muted)">
+    High-level data • Detailed analytics for PRO
+  </p>
 </div>
 
+</div>
+
+
 <!-- HISTORY -->
-<div id="history" class="tab">
-  <div class="card">
-    <h3>🕒 Alert History</h3>
-    <p style="font-size:12px;color:var(--muted)">
-      Full history unlocked for PRO users
-    </p>
-  </div>
+<div class="card">
+  <h3>🕒 Alert History</h3>
+  <p style="font-size:12px;color:var(--muted)">
+    Showing last 3 alerts (Free)
+  </p>
+</div>
+
+<div class="card">
+  <p><b>BTC / USDT</b> — Whale Buy</p>
+  <p style="font-size:12px;color:var(--muted)">Today • Preview only</p>
+</div>
+
+<div class="card">
+  <p><b>ETH / USDT</b> — Accumulation</p>
+  <p style="font-size:12px;color:var(--muted)">Yesterday • Preview only</p>
+</div>
+
+<div class="card">
+  <p style="color:var(--gold)">⭐ PRO Feature</p>
+  <p style="font-size:12px;color:var(--muted)">
+    Full history with outcomes & confidence
+  </p>
 </div>
 
 <!-- UPGRADE -->
