--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
 --text:#f8fafc;
 --muted:#94a3b8;
 --success:#22c55e;
+--shadow:0 10px 35px rgba(0,0,0,.45);
+--shadow-hover:0 15px 40px rgba(0,0,0,.5);
+--gradient-bg:radial-gradient(circle at top,#1e293b,#020617 70%);
+--gradient-card:linear-gradient(145deg,#020617,#111827);
+--gradient-gold:linear-gradient(145deg,#1c1917,#422006);
+--gradient-btn:linear-gradient(90deg,#facc15,#f59e0b);
 }
 
 *{box-sizing:border-box}
@@ -24,10 +30,11 @@
 body{
 margin:0;
 font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto;
-background:radial-gradient(circle at top,#1e293b,#020617 70%);
+background:var(--gradient-bg);
 color:var(--text);
 padding-bottom:92px;
 user-select:none;
+overflow-x:hidden;
 }
 
 .app{
@@ -44,42 +51,39 @@ to{opacity:1}
 
 /* CARDS */
 .card{
-background:linear-gradient(145deg,#020617,#111827);
+background:var(--gradient-card);
 border-radius:18px;
-padding:16px;
-margin-bottom:14px;
+padding:20px;
+margin-bottom:18px;
 border:1px solid rgba(255,255,255,.08);
-box-shadow:0 10px 35px rgba(0,0,0,.45);
+box-shadow:var(--shadow);
 transition:transform .15s ease, box-shadow .15s ease;
 }
 .card:hover{
-transform:translateY(-2px);
-box-shadow:0 15px 40px rgba(0,0,0,.5);
+transform:translateY(-4px);
+box-shadow:var(--shadow-hover);
 }
 
 .card.gold{
 border:1px solid rgba(250,204,21,.45);
-background:linear-gradient(145deg,#1c1917,#422006);
+background:var(--gradient-gold);
+box-shadow:0 10px 35px rgba(250,204,21,.25);
 }
 
 /* TABS */
 .tab{display:none}
-.tab.active{display:block; animation:slideIn .3s ease}
-
-@keyframes slideIn{
-from{opacity:0; transform:translateX(10px)}
-to{opacity:1; transform:translateX(0)}
-}
+.tab.active{display:block}
 
 /* BADGE */
 .badge{
 display:inline-block;
-padding:4px 12px;
+padding:6px 14px;
 border-radius:999px;
-font-size:11px;
+font-size:12px;
 font-weight:700;
-background:linear-gradient(90deg,#facc15,#f59e0b);
+background:var(--gradient-btn);
 color:#000;
+text-transform:uppercase;
 }
 
 /* BLUR */
@@ -94,18 +98,28 @@ border-radius:6px;
 /* BUTTON */
 .btn{
 width:100%;
-padding:12px;
+padding:14px;
 border-radius:12px;
 border:none;
 font-weight:900;
 cursor:pointer;
-background:linear-gradient(90deg,#facc15,#f59e0b);
+background:var(--gradient-btn);
 color:#000;
+font-size:16px;
 }
 
 /* TABLE */
-table{width:100%; border-collapse:collapse; font-size:13px}
-td,th{padding:7px 0}
+table{
+width:100%;
+border-collapse:collapse;
+font-size:14px;
+margin-top:10px;
+}
+td,th{
+padding:10px 0;
+border-bottom:1px solid rgba(255,255,255,.05);
+}
+th{color:var(--gold)}
 
 /* NAV */
 .nav{
@@ -116,7 +130,7 @@ right:0;
 background:var(--nav);
 display:grid;
 grid-template-columns:repeat(6,1fr);
-padding:8px 0;
+padding:12px 0;
 border-top:1px solid rgba(255,255,255,.12);
 z-index:999;
 }
@@ -128,7 +142,7 @@ color:var(--muted);
 cursor:pointer;
 }
 .nav-item.active{color:var(--blue)}
-.icon{font-size:18px}
+.icon{font-size:20px}
 </style>
 </head>
 
@@ -176,7 +190,7 @@ cursor:pointer;
     <h3>🐳 Whale Activity Summary</h3>
     <ul>
       <li>Large BTC inflows</li>
-      <li>Exchange reserves down</li>
+      <li>Exchange reserves decreasing</li>
       <li>Open interest rising</li>
     </ul>
   </div>
@@ -214,7 +228,7 @@ cursor:pointer;
 
   <div class="card">
     <table>
-      <tr><th>Feature</th><th>Free</th><th style="color:var(--gold)">PRO</th></tr>
+      <tr><th>Feature</th><th>Free</th><th>PRO</th></tr>
       <tr><td>Signals/day</td><td align="center">1</td><td align="center">∞</td></tr>
       <tr><td>Exact levels</td><td align="center">❌</td><td align="center">✅</td></tr>
       <tr><td>Alert history</td><td align="center">Limited</td><td align="center">Full</td></tr>
@@ -259,7 +273,8 @@ cursor:pointer;
 
 <script>
 const tg = window.Telegram.WebApp;
-tg.ready(); tg.expand();
+tg.ready();
+tg.expand();
 
 const user = tg.initDataUnsafe?.user;
 if(user){
